Bug tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: 1.0.0 - Date: XXXX-XX-XX
---------------------------------

Bugfixes:

 * Issue 206: can't change directory (CWD) when using UnixAuthorizer and process
   cwd is == "/root".


Version: 0.7.0 - Date: 2012-01-25
---------------------------------

Enhancements:

 * Issue #152: uploads (from server to client) on UNIX are now from 2x (Linux)
   to 3x (OSX) faster because of sendfile(2) system call usage.

 * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
   but can be set via setattr().

 * Issue #168: added FTPHandler.logerror() method. It can be overridden to
   provide more information (e.g. username) when logging exception tracebacks.

 * Issue #174: added support for SITE CHMOD command (change file mode).

 * Issue #177: setuptools is now used in setup.py

 * Issue #178: added anti flood script in demo directory.

 * Issue #181: added CallEvery class to call a function every x seconds.

 * Issue #185: pass Debian licenscheck tool.

 * Issue #189: the internal scheduler has been rewritten from scratch and it is
   an order of magnitude faster, especially for operations like cancel() which
   are involved when clients are disconnected (hence invoked very often).
   Some benchmarks:
       schedule   : +0.5x
       reschedule : +1.7x
       cancel     : +477x  (with 1 milion scheduled functions)
       run:       : +8x
    Also, a single scheduled function now consumes 1/3 of the memory thanks
    to __slots__ usage.

 * Issue 195: enhanced unix_daemon.py script which (now uses python-daemon
   library).

 * Issue #196: added callback for failed login attempt.

 * Issue #200: FTPServer.server_forever() is now a class method.

 * Issue #202: added benchmark script.

Bugfixes:

 * Issue #156: data connection must be closed before sending 226/426 reply.
   This was against RFC-959 and was causing problems with older FTP clients.
